Fix blog paragraph spacing

--- a/css/style.css
+++ b/css/style.css
@@ -810,7 +810,7 @@ footer {
 
 .blog-info h2 {
   font-size: 2.5rem;
-  line-height: 1.1;
+  line-height: 1.4;
 }
 
 .blog-tags {
@@ -843,8 +843,16 @@ footer {
   margin: 3rem auto;
 }
 
+.blog-container > * + * {
+  margin-bottom: 2.5rem;
+}
+
 .blog-container > p {
-  margin: 1rem 0;
+  line-height: 2;
+}
+
+.blog-container > h2 {
+  margin-bottom: 1rem;
 }
 
 .blog-container > img {
